@@ -6,60 +6,46 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.b2international.snowowl</groupId>
 	<artifactId>snowowl-parent</artifactId>
-	<version>7.6.0</version>
+	<version>7.7.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		
+
 		<!-- Maven Dependency Versions -->
-		<jackson.version>2.9.10</jackson.version>
-		<jackson.databind.version>2.9.10.3</jackson.databind.version>
+		<jackson.version>2.10.4</jackson.version>
+		<jackson.databind.version>2.10.4</jackson.databind.version>
 		<netty.version>4.1.45.Final</netty.version>
 		<slf4j.version>1.7.25</slf4j.version>
 		<logback.version>1.2.3</logback.version>
 		<logback.versionRange>[1.2.3,1.2.4)</logback.versionRange>
-		<guava.version>21.0</guava.version>
-		<guava.versionRange>[21.0.0,22.0.0)</guava.versionRange>
-		<net.bytebuddy.version>1.9.3</net.bytebuddy.version>
-		<groovy.version>2.4.17</groovy.version>
-		<commons.collections.version>3.2.2</commons.collections.version>
-		<commons.collections.versionRange>[3.2.2,3.3.0)</commons.collections.versionRange>
+		<guava.version>27.1-jre</guava.version>
+		<guava.versionRange>[27.1.0,28.0.0)</guava.versionRange>
+		<groovy.version>2.4.19</groovy.version>
 		<kotlin.version>1.2.71</kotlin.version>
-		<protege.version>5.0.4-b2i</protege.version>
-		<owlapi.version>4.5.10</owlapi.version>
+		<protege.version>5.0.5-b2i</protege.version>
+		<owlapi.version>4.5.24</owlapi.version>
 		<elk.version>0.4.3</elk.version>
-		<jetty.version>9.4.18.v20190429</jetty.version>
-		<classgraph.version>4.8.43</classgraph.version>
+		<jetty.version>9.4.27.v20200227</jetty.version>
+		<classgraph.version>4.8.78</classgraph.version>
 		<jbcrypt.version>0.4.1</jbcrypt.version>
 		<typetools.version>0.6.1</typetools.version>
 		<hdrhistogram.version>2.1.10</hdrhistogram.version>
-		<commons.logging.version>1.2</commons.logging.version>
-		<commons.codec.version>1.10</commons.codec.version>
-		<fastutil.version>8.2.2</fastutil.version>
+		<fastutil.version>8.3.1</fastutil.version>
 		<jaxb.api.version>2.3.0</jaxb.api.version>
 		<javax.activation.version>1.2.0</javax.activation.version>
 		<snomed.owl.toolkit.version>2.6.0</snomed.owl.toolkit.version>
 		<failsafe.version>2.3.1</failsafe.version>
 		<!-- Build tool/compiler versions -->
-		<tycho.version>1.5.0</tycho.version>
-		<tycho-extras.version>1.5.0</tycho-extras.version>
-		<xtend.compiler.version>2.18.0</xtend.compiler.version>
+		<tycho.version>1.7.0</tycho.version>
+		<tycho-extras.version>1.7.0</tycho-extras.version>
+		<xtend.compiler.version>2.21.0</xtend.compiler.version>
 		<jacoco.version>0.8.4</jacoco.version>
-
+		
 		<!-- Versioning -->
 		<maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>
 		<forceContextQualifier>${maven.build.timestamp}</forceContextQualifier>
-
-		<!-- Testing -->
-		<testHeapSize>1g</testHeapSize>
-		<testArgLine>${tycho.testArgLine} -Xms${testHeapSize} -Xmx${testHeapSize} -XX:+AlwaysLockClassLoader -Dosgi.classloader.type=nonparallel -Djetty.home.bundle=org.eclipse.jetty.osgi.boot -Djetty.port=9090 -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly -XX:+AlwaysPreTouch -Dlogback.configurationFile=${basedir}/src/configuration/logback-maven.xml</testArgLine>
-
-		<!-- Deployment -->
-		<maven.repository.id>nexus_deployment</maven.repository.id>
-		<nexus.releases.url>${nexus.url}/content/repositories/releases</nexus.releases.url>
-		<nexus.snapshots.url>${nexus.url}/content/repositories/snapshots</nexus.snapshots.url>
 	</properties>
 
 	<modules>
@@ -81,25 +67,32 @@
 			<url>https://b2ihealthcare.github.io/protege/</url>
 			<releases>
 				<enabled>true</enabled>
-				<updatePolicy>never</updatePolicy>
 			</releases>
 			<snapshots>
-        		<enabled>false</enabled>
-        		<updatePolicy>never</updatePolicy>
-    		</snapshots>
+				<enabled>false</enabled>
+			</snapshots>
 		</repository>
 		<repository>
-        	<id>snomed-international-releases</id>
-        	<url>https://maven.ihtsdotools.org/content/repositories/releases/</url>
-        	<releases>
-           		<enabled>true</enabled>
-           		<updatePolicy>never</updatePolicy>
-        	</releases>
-        	<snapshots>
-          		<enabled>false</enabled>
-          		<updatePolicy>never</updatePolicy>
-        	</snapshots>
-     	</repository>
+			<id>owlapi-mvn-repo</id>
+			<url>https://b2ihealthcare.github.io/owlapi/</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>snomed-international-releases</id>
+			<url>https://maven.ihtsdotools.org/content/repositories/releases/
+			</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
 	</repositories>
 
 	<dependencies>
@@ -165,15 +158,21 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${guava.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
-			<version>1.7.1</version>
+			<version>3.16.1</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.yaml</groupId>
 			<artifactId>snakeyaml</artifactId>
-			<version>1.25</version>
+			<version>1.26</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -187,18 +186,6 @@
 		    <artifactId>reactive-streams</artifactId>
 		    <version>1.0.0</version>
 		    <scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>commons-collections</groupId>
-			<artifactId>commons-collections</artifactId>
-			<version>3.2.2</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>${guava.version}</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>io.netty</groupId>
@@ -343,10 +330,15 @@
 		          	<groupId>log4j</groupId>
   					<artifactId>log4j</artifactId>
 		        </exclusion>
+		        <!-- We use our own custom owlapi osgi distribution, see next dependency -->
+		        <exclusion>
+		          	<groupId>net.sourceforge.owlapi</groupId>
+  					<artifactId>owlapi-osgidistribution</artifactId>
+		        </exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>net.sourceforge.owlapi</groupId>
+			<groupId>com.b2international</groupId>
 			<artifactId>owlapi-osgidistribution</artifactId>
 			<version>${owlapi.version}</version>
 			<scope>provided</scope>
@@ -457,12 +449,6 @@
       		<scope>provided</scope>
     	</dependency>
     	<dependency>
-    		<groupId>net.bytebuddy</groupId>
-    		<artifactId>byte-buddy</artifactId>
-    		<version>${net.bytebuddy.version}</version>
-    		<scope>provided</scope>
-    	</dependency>
-    	<dependency>
     		<groupId>com.fasterxml</groupId>
     		<artifactId>classmate</artifactId>
     		<version>1.3.4</version>
@@ -523,28 +509,10 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-    		<groupId>commons-codec</groupId>
-    		<artifactId>commons-codec</artifactId>
-    		<version>${commons.codec.version}</version>
-    		<scope>provided</scope>
-		</dependency>
-		<dependency>
-    		<groupId>commons-logging</groupId>
-    		<artifactId>commons-logging</artifactId>
-    		<version>${commons.logging.version}</version>
-    		<scope>provided</scope>
-		</dependency>
-		<dependency>
 			<groupId>it.unimi.dsi</groupId>
 			<artifactId>fastutil</artifactId>
 			<version>${fastutil.version}</version>
 			<scope>provided</scope>	
-		</dependency>
-		<dependency>
-	   		<groupId>javax.activation</groupId>
-	    	<artifactId>javax.activation-api</artifactId>
-		    <version>1.2.0</version>
-		    <scope>provided</scope>	
 		</dependency>
 		<dependency>
 		  <groupId>javax.xml.bind</groupId>
@@ -565,10 +533,22 @@
 			<scope>provided</scope>	
 		</dependency>
 		<dependency>
+	   		<groupId>javax.activation</groupId>
+	    	<artifactId>javax.activation-api</artifactId>
+		    <version>${javax.activation.version}</version>
+		    <scope>provided</scope>
+		</dependency>
+		<dependency>
 		    <groupId>com.sun.activation</groupId>
 		    <artifactId>javax.activation</artifactId>
 		    <version>${javax.activation.version}</version>
 		    <scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.woodstox</groupId>
+			<artifactId>woodstox-core</artifactId>
+			<version>5.3.0</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
     		<groupId>org.snomed.otf</groupId>
@@ -648,7 +628,7 @@
 							<type>eclipse-plugin</type>
 							<id>org.eclipse.osgi</id>
 							<restrictTo>
-								<versionRange>[3.13.0,3.15.0]</versionRange>
+								<versionRange>[3.15.0,3.16.0]</versionRange>
 							</restrictTo>
 						</filter>
 						<!-- work around Equinox bug 348045 -->
@@ -750,15 +730,6 @@
 							<id>com.fasterxml.jackson.dataformat.jackson-dataformat-afterburner</id>
 							<restrictTo>
 								<version>${jackson.version}</version>
-							</restrictTo>
-						</filter>
-						<!-- Restrict Apache Commons Collections to versions above and including 
-							3.2.2 -->
-						<filter>
-							<type>p2-installable-unit</type>
-							<id>org.apache.commons.collections</id>
-							<restrictTo>
-								<versionRange>${commons.collections.versionRange}</versionRange>
 							</restrictTo>
 						</filter>
 						<filter>
@@ -904,20 +875,20 @@
 		</pluginManagement>
 	</build>
 
-    <profiles>
-        <profile>
-            <id>docs</id>
-            <activation>
-                <property>
-                    <name>docs</name>
-                    <value>true</value>
-                </property>
-            </activation>
-            <modules>
-                <module>documentation</module>
-            </modules>
-        </profile>
-    </profiles>
+	<profiles>
+		<profile>
+			<id>docs</id>
+			<activation>
+				<property>
+					<name>docs</name>
+					<value>true</value>
+				</property>
+			</activation>
+			<modules>
+				<module>documentation</module>
+			</modules>
+		</profile>
+	</profiles>
 
 	<distributionManagement>
 		<repository>
